[gd_scene load_steps=3 format=3 uid="uid://bwql6v1lq66pl"]

[ext_resource type="Script" path="res://scripts/utils/pause_menu.gd" id="1_cvowp"]
[ext_resource type="FontFile" uid="uid://d8efdb58iymm" path="res://assets/Fonts/NbPixelFontBundle_v1_0/KarenFat.ttf" id="1_id1bx"]

[node name="Pause_Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_cvowp")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.2)

[node name="menu_holder" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6

[node name="pause_button" type="TouchScreenButton" parent="menu_holder"]
position = Vector2(0, -27)

[node name="pause" type="Button" parent="menu_holder/pause_button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -12.0
offset_right = 32.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_id1bx")
theme_override_font_sizes/font_size = 16
text = "RESUME"

[node name="quit_button" type="TouchScreenButton" parent="menu_holder"]
position = Vector2(0, 12)

[node name="quit" type="Button" parent="menu_holder/quit_button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -12.0
offset_right = 42.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_id1bx")
theme_override_font_sizes/font_size = 16
text = "QUIT GAME"

[connection signal="pressed" from="menu_holder/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="menu_holder/pause_button/pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="menu_holder/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="menu_holder/quit_button/quit" to="." method="_on_quit_pressed"]
